; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_server_api.c_wfc_server_disconnect.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_server_api.c_wfc_server_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"%s: called\00", align 1
@VCOS_FUNCTION = common dso_local global i32 0, align 4
@VCOS_LOG_CATEGORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wfc_server_disconnect() #0 {
  %1 = load i32, i32* @VCOS_FUNCTION, align 4
  %2 = call i32 @vcos_log_trace(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %1)
  %3 = call i64 (...) @wfc_client_ipc_deinit()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @VCOS_LOG_CATEGORY, align 4
  %7 = call i32 @vcos_log_unregister(i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @vcos_log_trace(i8*, i32) #1

declare dso_local i64 @wfc_client_ipc_deinit(...) #1

declare dso_local i32 @vcos_log_unregister(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
